# coding-challenges

./: README.md
01_rwc/: Cargo.toml
01_rwc/src/: main.rs
02_rjson/: Cargo.toml
02_rjson/src/: bin.rs  lib.rs
02_rjson/tests/: validation_test.rs
03_rcompress/: Cargo.toml  README.md
03_rcompress/src/: bitmanipulation.rs  decoder.rs  encoder.rs  header.rs  lib.rs  main.rs  tree.rs
04_rcut/: Cargo.toml  README.md
04_rcut/src/: field.rs  lib.rs  main.rs
05_load_balancer/: Cargo.toml
05_load_balancer/src/: backend.rs
05_load_balancer/src/lb/: bin.rs
load_balancer/: Cargo.toml  README.md
load_balancer/example/: config.toml
load_balancer/src/: backend.rs  bin.rs  config.rs  error.rs  health.rs  lib.rs  main.rs  policies.rs
load_balancer/src/lb/: bin.rs
load_balancer/tests/: common.rs  health.rs  integration.rs
rjson/: Cargo.toml
rjson/src/: lib.rs
rjson/tests/: validation_test.rs
