[package]
name = "lb"
version = "0.1.0"
edition = "2021"
authors = ["Marco Bacis <marc.bacis@gmail.com>"]

[lib]
name = "lb"
path = "src/lib.rs"

[[bin]]
name = "lb"
path = "src/bin.rs"

[[bin]]
name = "backend"
path = "src/backend.rs"

[dependencies]
actix-web = "4.5.1"
clap = "4.5.2"
reqwest = "0.11.25"
tokio = { version="1.36.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
wiremock = "0.6.0"
