[package]
name = "lb"
version = "0.1.0"
edition = "2021"
authors = ["Marco Bacis <marc.bacis@gmail.com>"]

[lib]
name = "lb"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/backend.rs"

[dependencies]
actix-web = "4.5.1"
clap = { version = "4.5.2", features = ["derive", "env"] }
futures = "0.3.30"
join = "0.3.1"
reqwest = "0.11.25"
serde = "1.0.200"
serde_derive = "1.0.200"
tokio = { version="1.36.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.12"

[dev-dependencies]
wiremock = "0.6.0"
